begin_unit|revision:0.9.5;language:Java;cregit-version:0.0.1
begin_comment
comment|/**  * Licensed to the Apache Software Foundation (ASF) under one  * or more contributor license agreements.  See the NOTICE file  * distributed with this work for additional information  * regarding copyright ownership.  The ASF licenses this file  * to you under the Apache License, Version 2.0 (the  * "License"); you may not use this file except in compliance  * with the License.  You may obtain a copy of the License at  *<p>  * http://www.apache.org/licenses/LICENSE-2.0  *<p>  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
end_comment

begin_package
DECL|package|org.apache.hadoop.ozone.om.request.key
package|package
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|key
package|;
end_package

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|List
import|;
end_import

begin_import
import|import
name|java
operator|.
name|util
operator|.
name|UUID
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Assert
import|;
end_import

begin_import
import|import
name|org
operator|.
name|junit
operator|.
name|Test
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|helpers
operator|.
name|OmKeyLocationInfo
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|request
operator|.
name|TestOMRequestUtils
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|om
operator|.
name|response
operator|.
name|OMClientResponse
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|AllocateBlockRequest
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|KeyArgs
import|;
end_import

begin_import
import|import
name|org
operator|.
name|apache
operator|.
name|hadoop
operator|.
name|ozone
operator|.
name|protocol
operator|.
name|proto
operator|.
name|OzoneManagerProtocolProtos
operator|.
name|OMRequest
import|;
end_import

begin_comment
comment|/**  * Tests OMAllocateBlockRequest class.  */
end_comment

begin_class
DECL|class|TestOMAllocateBlockRequest
specifier|public
class|class
name|TestOMAllocateBlockRequest
extends|extends
name|TestOMKeyRequest
block|{
annotation|@
name|Test
DECL|method|testPreExecute ()
specifier|public
name|void
name|testPreExecute
parameter_list|()
throws|throws
name|Exception
block|{
name|doPreExecute
argument_list|(
name|createAllocateBlockRequest
argument_list|()
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testValidateAndUpdateCache ()
specifier|public
name|void
name|testValidateAndUpdateCache
parameter_list|()
throws|throws
name|Exception
block|{
name|OMRequest
name|modifiedOmRequest
init|=
name|doPreExecute
argument_list|(
name|createAllocateBlockRequest
argument_list|()
argument_list|)
decl_stmt|;
name|OMAllocateBlockRequest
name|omAllocateBlockRequest
init|=
operator|new
name|OMAllocateBlockRequest
argument_list|(
name|modifiedOmRequest
argument_list|)
decl_stmt|;
comment|// Add volume, bucket, key entries to DB.
name|TestOMRequestUtils
operator|.
name|addVolumeAndBucketToDB
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|TestOMRequestUtils
operator|.
name|addKeyToTable
argument_list|(
literal|true
argument_list|,
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|,
name|replicationType
argument_list|,
name|replicationFactor
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
comment|// Check before calling validateAndUpdateCache. As adding DB entry has
comment|// not added any blocks, so size should be zero.
name|OmKeyInfo
name|omKeyInfo
init|=
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|get
argument_list|(
name|omMetadataManager
operator|.
name|getOpenKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|)
argument_list|)
decl_stmt|;
name|List
argument_list|<
name|OmKeyLocationInfo
argument_list|>
name|omKeyLocationInfo
init|=
name|omKeyInfo
operator|.
name|getLatestVersionLocations
argument_list|()
operator|.
name|getLocationList
argument_list|()
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omKeyLocationInfo
operator|.
name|size
argument_list|()
operator|==
literal|0
argument_list|)
expr_stmt|;
name|OMClientResponse
name|omAllocateBlockResponse
init|=
name|omAllocateBlockRequest
operator|.
name|validateAndUpdateCache
argument_list|(
name|ozoneManager
argument_list|,
literal|100L
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|OK
argument_list|,
name|omAllocateBlockResponse
operator|.
name|getOMResponse
argument_list|()
operator|.
name|getStatus
argument_list|()
argument_list|)
expr_stmt|;
comment|// Check open table whether new block is added or not.
name|omKeyInfo
operator|=
name|omMetadataManager
operator|.
name|getOpenKeyTable
argument_list|()
operator|.
name|get
argument_list|(
name|omMetadataManager
operator|.
name|getOpenKey
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|keyName
argument_list|,
name|clientID
argument_list|)
argument_list|)
expr_stmt|;
comment|// Check modification time
name|Assert
operator|.
name|assertEquals
argument_list|(
name|modifiedOmRequest
operator|.
name|getAllocateBlockRequest
argument_list|()
operator|.
name|getKeyArgs
argument_list|()
operator|.
name|getModificationTime
argument_list|()
argument_list|,
name|omKeyInfo
operator|.
name|getModificationTime
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertNotEquals
argument_list|(
name|omKeyInfo
operator|.
name|getCreationTime
argument_list|()
argument_list|,
name|omKeyInfo
operator|.
name|getModificationTime
argument_list|()
argument_list|)
expr_stmt|;
comment|// Check data of the block
name|OzoneManagerProtocolProtos
operator|.
name|KeyLocation
name|keyLocation
init|=
name|modifiedOmRequest
operator|.
name|getAllocateBlockRequest
argument_list|()
operator|.
name|getKeyLocation
argument_list|()
decl_stmt|;
name|omKeyLocationInfo
operator|=
name|omKeyInfo
operator|.
name|getLatestVersionLocations
argument_list|()
operator|.
name|getLocationList
argument_list|()
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omKeyLocationInfo
operator|.
name|size
argument_list|()
operator|==
literal|1
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|keyLocation
operator|.
name|getBlockID
argument_list|()
operator|.
name|getContainerBlockID
argument_list|()
operator|.
name|getContainerID
argument_list|()
argument_list|,
name|omKeyLocationInfo
operator|.
name|get
argument_list|(
literal|0
argument_list|)
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|keyLocation
operator|.
name|getBlockID
argument_list|()
operator|.
name|getContainerBlockID
argument_list|()
operator|.
name|getLocalID
argument_list|()
argument_list|,
name|omKeyLocationInfo
operator|.
name|get
argument_list|(
literal|0
argument_list|)
operator|.
name|getLocalID
argument_list|()
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testValidateAndUpdateCacheWithVolumeNotFound ()
specifier|public
name|void
name|testValidateAndUpdateCacheWithVolumeNotFound
parameter_list|()
throws|throws
name|Exception
block|{
name|OMRequest
name|modifiedOmRequest
init|=
name|doPreExecute
argument_list|(
name|createAllocateBlockRequest
argument_list|()
argument_list|)
decl_stmt|;
name|OMAllocateBlockRequest
name|omAllocateBlockRequest
init|=
operator|new
name|OMAllocateBlockRequest
argument_list|(
name|modifiedOmRequest
argument_list|)
decl_stmt|;
name|OMClientResponse
name|omAllocateBlockResponse
init|=
name|omAllocateBlockRequest
operator|.
name|validateAndUpdateCache
argument_list|(
name|ozoneManager
argument_list|,
literal|100L
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omAllocateBlockResponse
operator|.
name|getOMResponse
argument_list|()
operator|.
name|getStatus
argument_list|()
operator|==
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|VOLUME_NOT_FOUND
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testValidateAndUpdateCacheWithBucketNotFound ()
specifier|public
name|void
name|testValidateAndUpdateCacheWithBucketNotFound
parameter_list|()
throws|throws
name|Exception
block|{
name|OMRequest
name|modifiedOmRequest
init|=
name|doPreExecute
argument_list|(
name|createAllocateBlockRequest
argument_list|()
argument_list|)
decl_stmt|;
name|OMAllocateBlockRequest
name|omAllocateBlockRequest
init|=
operator|new
name|OMAllocateBlockRequest
argument_list|(
name|modifiedOmRequest
argument_list|)
decl_stmt|;
comment|// Added only volume to DB.
name|TestOMRequestUtils
operator|.
name|addVolumeToDB
argument_list|(
name|volumeName
argument_list|,
literal|"ozone"
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|OMClientResponse
name|omAllocateBlockResponse
init|=
name|omAllocateBlockRequest
operator|.
name|validateAndUpdateCache
argument_list|(
name|ozoneManager
argument_list|,
literal|100L
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omAllocateBlockResponse
operator|.
name|getOMResponse
argument_list|()
operator|.
name|getStatus
argument_list|()
operator|==
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|BUCKET_NOT_FOUND
argument_list|)
expr_stmt|;
block|}
annotation|@
name|Test
DECL|method|testValidateAndUpdateCacheWithKeyNotFound ()
specifier|public
name|void
name|testValidateAndUpdateCacheWithKeyNotFound
parameter_list|()
throws|throws
name|Exception
block|{
name|OMRequest
name|modifiedOmRequest
init|=
name|doPreExecute
argument_list|(
name|createAllocateBlockRequest
argument_list|()
argument_list|)
decl_stmt|;
name|OMAllocateBlockRequest
name|omAllocateBlockRequest
init|=
operator|new
name|OMAllocateBlockRequest
argument_list|(
name|modifiedOmRequest
argument_list|)
decl_stmt|;
comment|// Add volume, bucket entries to DB.
name|TestOMRequestUtils
operator|.
name|addVolumeAndBucketToDB
argument_list|(
name|volumeName
argument_list|,
name|bucketName
argument_list|,
name|omMetadataManager
argument_list|)
expr_stmt|;
name|OMClientResponse
name|omAllocateBlockResponse
init|=
name|omAllocateBlockRequest
operator|.
name|validateAndUpdateCache
argument_list|(
name|ozoneManager
argument_list|,
literal|100L
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|omAllocateBlockResponse
operator|.
name|getOMResponse
argument_list|()
operator|.
name|getStatus
argument_list|()
operator|==
name|OzoneManagerProtocolProtos
operator|.
name|Status
operator|.
name|KEY_NOT_FOUND
argument_list|)
expr_stmt|;
block|}
comment|/**    * This method calls preExecute and verify the modified request.    * @param originalOMRequest    * @return OMRequest - modified request returned from preExecute.    * @throws Exception    */
DECL|method|doPreExecute (OMRequest originalOMRequest)
specifier|private
name|OMRequest
name|doPreExecute
parameter_list|(
name|OMRequest
name|originalOMRequest
parameter_list|)
throws|throws
name|Exception
block|{
name|OMAllocateBlockRequest
name|omAllocateBlockRequest
init|=
operator|new
name|OMAllocateBlockRequest
argument_list|(
name|originalOMRequest
argument_list|)
decl_stmt|;
name|OMRequest
name|modifiedOmRequest
init|=
name|omAllocateBlockRequest
operator|.
name|preExecute
argument_list|(
name|ozoneManager
argument_list|)
decl_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|originalOMRequest
operator|.
name|getCmdType
argument_list|()
argument_list|,
name|modifiedOmRequest
operator|.
name|getCmdType
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|originalOMRequest
operator|.
name|getClientId
argument_list|()
argument_list|,
name|modifiedOmRequest
operator|.
name|getClientId
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|modifiedOmRequest
operator|.
name|hasAllocateBlockRequest
argument_list|()
argument_list|)
expr_stmt|;
name|AllocateBlockRequest
name|allocateBlockRequest
init|=
name|modifiedOmRequest
operator|.
name|getAllocateBlockRequest
argument_list|()
decl_stmt|;
comment|// Time should be set
name|Assert
operator|.
name|assertTrue
argument_list|(
name|allocateBlockRequest
operator|.
name|getKeyArgs
argument_list|()
operator|.
name|getModificationTime
argument_list|()
operator|>
literal|0
argument_list|)
expr_stmt|;
comment|// KeyLocation should be set.
name|Assert
operator|.
name|assertTrue
argument_list|(
name|allocateBlockRequest
operator|.
name|hasKeyLocation
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|containerID
argument_list|,
name|allocateBlockRequest
operator|.
name|getKeyLocation
argument_list|()
operator|.
name|getBlockID
argument_list|()
operator|.
name|getContainerBlockID
argument_list|()
operator|.
name|getContainerID
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|localID
argument_list|,
name|allocateBlockRequest
operator|.
name|getKeyLocation
argument_list|()
operator|.
name|getBlockID
argument_list|()
operator|.
name|getContainerBlockID
argument_list|()
operator|.
name|getLocalID
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertTrue
argument_list|(
name|allocateBlockRequest
operator|.
name|getKeyLocation
argument_list|()
operator|.
name|hasPipeline
argument_list|()
argument_list|)
expr_stmt|;
name|Assert
operator|.
name|assertEquals
argument_list|(
name|allocateBlockRequest
operator|.
name|getClientID
argument_list|()
argument_list|,
name|allocateBlockRequest
operator|.
name|getClientID
argument_list|()
argument_list|)
expr_stmt|;
return|return
name|modifiedOmRequest
return|;
block|}
DECL|method|createAllocateBlockRequest ()
specifier|private
name|OMRequest
name|createAllocateBlockRequest
parameter_list|()
block|{
name|KeyArgs
name|keyArgs
init|=
name|KeyArgs
operator|.
name|newBuilder
argument_list|()
operator|.
name|setVolumeName
argument_list|(
name|volumeName
argument_list|)
operator|.
name|setBucketName
argument_list|(
name|bucketName
argument_list|)
operator|.
name|setKeyName
argument_list|(
name|keyName
argument_list|)
operator|.
name|setFactor
argument_list|(
name|replicationFactor
argument_list|)
operator|.
name|setType
argument_list|(
name|replicationType
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
name|AllocateBlockRequest
name|allocateBlockRequest
init|=
name|AllocateBlockRequest
operator|.
name|newBuilder
argument_list|()
operator|.
name|setClientID
argument_list|(
name|clientID
argument_list|)
operator|.
name|setKeyArgs
argument_list|(
name|keyArgs
argument_list|)
operator|.
name|build
argument_list|()
decl_stmt|;
return|return
name|OMRequest
operator|.
name|newBuilder
argument_list|()
operator|.
name|setCmdType
argument_list|(
name|OzoneManagerProtocolProtos
operator|.
name|Type
operator|.
name|AllocateBlock
argument_list|)
operator|.
name|setClientId
argument_list|(
name|UUID
operator|.
name|randomUUID
argument_list|()
operator|.
name|toString
argument_list|()
argument_list|)
operator|.
name|setAllocateBlockRequest
argument_list|(
name|allocateBlockRequest
argument_list|)
operator|.
name|build
argument_list|()
return|;
block|}
block|}
end_class

end_unit

